<resources>
  <string name="app_name">Countries App</string>
  <string name="title_countries">Countries</string>
  <string name="label_capital">Capital:</string>
  <string name="label_languages">Languages:</string>
  <string name="label_region">Region:</string>
  <string name="label_sub_region">Sub Region:</string>
  <string name="label_population">Population:</string>
  <string name="label_currencies">Currencies:</string>
  <string name="search_title">Search countries</string>
  <string name="search_hint">Ex: Brasil</string>
</resources>
